[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brand_orchestrator"
version = "0.1.0"
description = "AI agent orchestrator for political stream + culture intelligence (Phase 1 backbone)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*", "scoring*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
